--- a/frontend/package.json
+++ b/frontend/package.json
@@ -16,10 +16,12 @@
     "@emotion/styled": "^11.14.1",
     "@mui/icons-material": "^7.3.2",
     "@mui/material": "^7.3.2",
+    "@react-pdf/renderer": "^4.3.1",
     "@stomp/stompjs": "^7.2.1",
     "antd": "^5.27.3",
     "axios": "^0.27.2",
     "bootstrap": "^5.3.8",
+    "buffer": "^6.0.3",
     "dayjs": "^1.11.18",
     "flat-embed": "^2.5.1",
     "html2canvas": "^1.4.1",
