--- a/mobile/package.json
+++ b/mobile/package.json
@@ -9,25 +9,29 @@
     "web": "expo start --web"
   },
   "dependencies": {
-    "@expo/vector-icons": "^14.0.4",
-    "@react-native-async-storage/async-storage": "2.1.0",
-    "@react-navigation/native": "^6.1.18",
-    "@react-navigation/stack": "^6.4.1",
-    "axios": "^1.7.2",
+    "@expo/vector-icons": "^15.0.3",
+    "@react-native-async-storage/async-storage": "2.2.0",
+    "@react-navigation/drawer": "^7.7.4",
+    "@react-navigation/native": "^7.1.21",
+    "@react-navigation/stack": "^7.6.7",
+    "axios": "^1.13.2",
     "expo": "~54.0.25",
     "expo-auth-session": "^7.0.9",
     "expo-crypto": "^15.0.7",
+    "expo-linear-gradient": "~15.0.7",
     "expo-status-bar": "~3.0.8",
     "expo-web-browser": "^15.0.9",
     "react": "19.1.0",
     "react-native": "0.81.5",
-    "react-native-gesture-handler": "~2.20.2",
-    "react-native-safe-area-context": "4.14.0",
-    "react-native-screens": "4.5.0",
-    "react-native-toast-message": "^2.2.1"
+    "react-native-gesture-handler": "~2.28.0",
+    "react-native-reanimated": "~4.1.5",
+    "react-native-safe-area-context": "~5.6.2",
+    "react-native-screens": "~4.16.0",
+    "react-native-toast-message": "^2.3.3",
+    "react-native-worklets": "0.5.1"
   },
   "devDependencies": {
-    "@babel/core": "^7.26.0",
+    "@babel/core": "^7.28.5",
     "babel-preset-expo": "^54.0.7",
     "react-native-dotenv": "^3.4.11"
   },
