--- a/mobile/package.json
+++ b/mobile/package.json
@@ -17,7 +17,9 @@
     "axios": "^1.13.2",
     "expo": "~54.0.25",
     "expo-auth-session": "^7.0.9",
+    "expo-av": "~16.0.7",
     "expo-crypto": "^15.0.7",
+    "expo-document-picker": "~14.0.7",
     "expo-linear-gradient": "~15.0.7",
     "expo-status-bar": "~3.0.8",
     "expo-web-browser": "^15.0.9",
