--- a/mobile/package.json
+++ b/mobile/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@expo/vector-icons": "^15.0.3",
     "@react-native-async-storage/async-storage": "2.2.0",
+    "@react-navigation/bottom-tabs": "^7.8.6",
     "@react-navigation/drawer": "^7.7.4",
     "@react-navigation/native": "^7.1.21",
     "@react-navigation/stack": "^7.6.7",
