--- a/mobile/package.json
+++ b/mobile/package.json
@@ -15,6 +15,7 @@
     "@react-navigation/drawer": "^7.7.4",
     "@react-navigation/native": "^7.1.21",
     "@react-navigation/stack": "^7.6.7",
+    "@stomp/stompjs": "^7.2.1",
     "axios": "^1.13.2",
     "expo": "~54.0.25",
     "expo-auth-session": "^7.0.9",
@@ -31,7 +32,8 @@
     "react-native-safe-area-context": "~5.6.2",
     "react-native-screens": "~4.16.0",
     "react-native-toast-message": "^2.3.3",
-    "react-native-worklets": "0.5.1"
+    "react-native-worklets": "0.5.1",
+    "sockjs-client": "^1.6.1"
   },
   "devDependencies": {
     "@babel/core": "^7.28.5",
