--- a/mobile/package.json
+++ b/mobile/package.json
@@ -17,6 +17,7 @@
     "@react-navigation/stack": "^7.6.7",
     "@stomp/stompjs": "^7.2.1",
     "axios": "^1.13.2",
+    "dayjs": "^1.11.19",
     "expo": "~54.0.25",
     "expo-auth-session": "^7.0.9",
     "expo-av": "~16.0.7",
@@ -31,7 +32,9 @@
     "react-native-reanimated": "~4.1.5",
     "react-native-safe-area-context": "~5.6.2",
     "react-native-screens": "~4.16.0",
+    "react-native-signature-canvas": "^5.0.1",
     "react-native-toast-message": "^2.3.3",
+    "react-native-webview": "^13.16.0",
     "react-native-worklets": "0.5.1",
     "sockjs-client": "^1.6.1"
   },
