--- a/frontend/package.json
+++ b/frontend/package.json
@@ -26,6 +26,7 @@
     "flat-embed": "^2.5.1",
     "html2canvas": "^1.4.1",
     "jspdf": "^3.0.3",
+    "lottie-react": "^2.4.1",
     "react": "^19.1.1",
     "react-bootstrap": "^2.10.10",
     "react-dom": "^19.1.1",
